# AI-Agents

./: README.md
.devcontainer/: devcontainer.json
Personal_Study_Assistant/: .env_example  .gitignore  main.py
ai_audio_tour_agent/: .env_example  .gitignore  README.md  agent.py  ai_audio_tour_agent.py  config.py  main.py  manager.py  printer.py  pyproject.toml  requirements.txt
ai_music_generator_agent/: README.md  main.py  pyproject.toml
ai_music_generator_agent/static/: index.html  script.js  style.css
